styles/styles.css
/* ... */
.loading svg {
    display: block;
    animation: linear osuSpinnerKurwa 2s infinite;
}

#settingsPanel {
    position: absolute;
    top: 0;
    left: -600px;

    max-width: 90vw;
    width: 600px;
    height: 100vh;

    background-color: #18171c;

    transition: ease-in-out 200ms;
    opacity: 0;

    display: flex;
    flex-direction: column;
    gap: 10px;

    overflow: overlay;
}

.section {
    position: relative;
    box-sizing: border-box;
    width: 100%;

    padding: 40px;
    background-color: #302e38;
    font-weight: 400;
}

#header {
    font-size: 3em;
}

#description {
    font-size: 1em;
}

#title {
    font-size: 2em;
}

.list {
    padding: 20px 0;

    display: flex;
    flex-direction: column;
    gap: 10px;
}

.selection {
    display: flex;
    justify-content: space-between;
    align-items: center;
    align-content: center;
}

.slider {
    flex-wrap: wrap;
}

.slider input {
    /* position: absolute; */
    /* bottom: 20px; */
    /* right: 20px; */

    margin: 0;
    width: 100%;

    padding-right: 20px;

    appearance: none;
    background: transparent;
    cursor: pointer;
}

.slider input::-webkit-slider-runnable-track {
    background: #8c66ff;
    height: 4px;

    margin: 20px 0;
    border-radius: 20px;
}

.slider input::-webkit-slider-thumb {
    appearance: none;

    width: 40px;
    height: 10px;

    background: #302e38;
    border-radius: 20px;

    margin-top: -3px;

    transition: cubic-bezier(0.03, 0.16, 0.29, 1.45) 150ms;
    transform-origin: center;

    outline: solid 3px #8c66ff;
}

.slider input::-webkit-slider-thumb:hover {
    box-shadow: 0 0 10px 0px #8c66ff;
}

.slider input::-webkit-slider-thumb:active {
    background: #8c66ff;
    width: 50px;
}

input[type="checkbox"] {
    appearance: none;
    width: 40px;
    height: 10px;

    outline: solid 3px #8c66ff;
    border-radius: 25px;

    transition: cubic-bezier(0.03, 0.16, 0.29, 1.45) 100ms;
}

input[type="checkbox"]:hover {
    box-shadow: 0 0 5px 2px #8c66ff;
    filter: brightness(2);
}

input[type="checkbox"]:checked {
    width: 50px;
    background-color: #8c66ff;
}

.list input[type="text"] {
    appearance: none;
    box-sizing: border-box;

    height: 40px;

    padding: 25px 20px;
    margin: 10px 0;

    font-family: Torus;
    color: white;
    font-size: 1em;

    border: none;
    background-color: rgba(0 0 0 / 0.5);
    border-radius: 10px;

    transition: ease-in-out 100ms;
}

.list input[type="text"]:focus {
    outline: solid 4px rgb(255, 187, 0);
}

@media screen and (max-aspect-ratio: 1 / 1) {
    body {
        justify-content: flex-start;
        padding: 0;

        overflow: hidden;
        /* background-size: 0; */
    }

    #main {
        /* background-color: transparent; */
        /* backdrop-filter: none; */
        overflow: hidden;
    }

    #inputContainer {
        padding: 10px;
        margin: 0;

        gap: 5px;
    }

    #inputContainer input[type="text"] {
        background-color: rgb(0 0 0 /0.5);
        border-radius: 5px;
    }

    #inputContainer button:nth-child(3) {
        background-color: rgba(24, 23, 31, 0.5);
        border-radius: 5px;
    }

    #settingsButton {
        height: 30px;
    }

    #playerContainer {
        aspect-ratio: 4 / 3;
        height: auto;

        border-radius: 0;
        margin-bottom: 120px;
    }

    #overlay {
        border-radius: 0;
    }

    #metadata {
        top: 100%;

        width: 100%;
        height: 120px;
        padding: 0;

        /* background-color: #18171c; */
        display: flex;
        flex-direction: column;
        justify-content: center;
    }

    #artistTitle,
    #versionCreator {
        padding: 0 20px;
    }

    #playerController {
        position: relative;
        width: 100%;
        height: 100%;
        bottom: 0;
        border-radius: 0 0 0 0;

        flex-wrap: wrap;
        align-content: flex-start;
        justify-content: center;

        background-color: rgba(0 0 0 / 0.5);
    }

    #settingsPanel {
        font-size: 3vw;
    }

    .section {
        padding: 30px;
    }

    #timeContainer {
        background-color: rgba(0 0 0 / 0.5);
        width: 100%;
        padding: 20px;
        margin-bottom: 20px;

        justify-content: center;
    }

    #playButton,
    #prevButton,
    #nextButton {
        /* width: 100%; */
        height: 30px;
        margin: 0;

        padding: 0;
    }

    #playButton:focus {
        outline: none;
    }

    #playButton:hover {
        filter: none;
    }

    #progress {
        width: 100%;
        padding: 20px;
    }

    #volumeSlider {
        display: none;
    }

    #playerController input[type="range"]::-webkit-slider-runnable-track {
        background: #43414c;
        height: 4px;

        margin: 10px;
        border-radius: 20px;
    }

    #playerController input[type="range"]::-webkit-slider-thumb {
        appearance: none;

        width: 10px;
        height: 10px;

        background: white;
        border-radius: 20px;

        margin-top: -3px;

        transition: cubic-bezier(0.03, 0.16, 0.29, 1.45) 100ms;
        transform-origin: center;
    }

    #playerController input[type="range"]::-webkit-slider-thumb:hover {
        box-shadow: 0 0 5px 0px white;
        filter: brightness(1.2);
    }
}

@media screen and (max-width: 425px) {
    #metadata {
        font-size: 3vw;
    }
}
/* ... */

